--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.3.3",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "swiper": "^12.0.3"
   },
